Correected mCustomScrollbar issues with Firefox and Chrome

--- a/scss/portfolio.scss
+++ b/scss/portfolio.scss
@@ -60,6 +60,20 @@ html, body {
 	margin:0;
 	padding:0;
 }
+.mainContentBox {
+  height: 100%;
+  overflow: auto;
+  position: relative;
+  /* opacity: 0; */
+  transition: opacity 1s;
+  z-index: 200;
+  background-position: center center;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+  background-attachment: fixed;
+  box-sizing: border-box;
+}
 .portfolio-body{
   background-color: $default-bg-color;
   height:100%;
